[gd_scene load_steps=3 format=3 uid="uid://dg4tn0m0rrh4m"]

[ext_resource type="Script" path="res://class_regions/enums/enum_container.gd" id="1_bjy2m"]
[ext_resource type="Texture2D" uid="uid://dp87jsrvjqb8e" path="res://UI/cross-mark_lorc.png" id="2_t5et3"]

[node name="EnumContainer" type="PanelContainer"]
offset_right = 512.0
offset_bottom = 256.0
script = ExtResource("1_bjy2m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FloatingPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="EnumNameEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "EnumName"

[node name="DeleteEnum" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer"]
self_modulate = Color(0.882353, 0.439216, 0.333333, 1)
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
icon = ExtResource("2_t5et3")
expand_icon = true

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="ItemsRoot" type="HFlowContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddItemBtn" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/ItemsRoot"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="AddItemLineEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/VBoxContainer/ItemsRoot/AddItemBtn"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = -36.0
offset_right = 67.0625
offset_bottom = -5.0

[connection signal="text_submitted" from="MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/EnumNameEdit" to="." method="set_new_enum_name"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/DeleteEnum" to="." method="_on_delete_enum_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/ItemsRoot/AddItemBtn" to="." method="add_item_to_enum"]
[connection signal="text_submitted" from="MarginContainer/ScrollContainer/VBoxContainer/ItemsRoot/AddItemBtn/AddItemLineEdit" to="." method="confirm_add_item"]
